--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "angular": "^1.5.5",
-    "angular-mocks": "^1.5.5"
+    "angular-mocks": "^1.5.5",
+    "angular-route": "^1.5.5"
   }
 }
